DRDT-128: z index fix for sticky bar overlaping video carousel

--- a/web/wp-content/themes/bumblebee/sass/header/_header.scss
+++ b/web/wp-content/themes/bumblebee/sass/header/_header.scss
@@ -227,6 +227,7 @@ body.wp-customize {
 		top: 0;
 		left: 0;
 		width: 100%;
+		z-index: 2;
 
 		.sticky-logo {
 			display: block;
